--- a/lab-3/ll-3-badge.Rmd
+++ b/lab-3/ll-3-badge.Rmd
@@ -9,156 +9,39 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-![](img/ML_MT_Hx.jpg){width="30%"}
-
-As a reminder, to earn a badge for each lab, you are required to respond to a set of prompts for two parts:
-
--   In Part I, you will reflect on your understanding of key concepts and begin to think about potential next steps for your own study.
-
--   In Part II, you will create a simple data product in R that demonstrates your ability to apply an analytic technique introduced in this learning lab.
+![](img/ML_FE_Hx.jpg){width="30%"}
 
 ### Part I: Reflect and Plan
+
+Please read this article and then answer then response to the following three questions.
 
 > Baker, R. S., Esbenshade, L., Vitale, J., & Karumbaiah, S. (2023). Using Demographic Data as Predictor Variables: a Questionable Choice. Journal of Educational Data Mining, 15(2), 22-52.
 
 Part A:
 
-1.  Like after each of the previous two learning labs, please interpret the predictive accuracy of the model. How much better was it relative to the untuned model? Was tuning worth the investment.
+1.  In what ways could the inclusion of demographic variables as predictors potentially reinforce biases in predictive analytics within education?
 
--   
+2.  The authors argue that demographic variables should be used to validate fairness rather than as predictors within models. What are the potential benefits and drawbacks of this approach?
 
-2.  Please interpret the fit metrics other than accuracy. What do the Kappa, sensitivity, specificity, and AOC tell us about the predictive accuracy of the model?
+3.  How could the limitations of categorization impact the use of demographic variables in predictive models?
 
--   
-
-Part B: Once again, use the institutional library (e.g. [NCSU Library](https://www.lib.ncsu.edu/#articles)), [Google Scholar](https://scholar.google.com/) or search engine to locate a research article, presentation, or resource that applies machine learning to an educational context aligned with your research interests. More specifically, **locate a machine learning study that involve making predictions -- and, ideally, one that utilizes a random forest**.
+Part B: Once again, use the institutional library (e.g. [NCSU Library](https://www.lib.ncsu.edu/#articles)), [Google Scholar](https://scholar.google.com/) or search engine to locate a research article, presentation, or resource that applies machine learning to an educational context aligned with your research interests. More specifically, please find an article in your field that utilizes in *feature engineering*
 
 1.  Provide an APA citation for your selected study.
 
     -   
 
-2.  What research questions were the authors of this study trying to address and why did they consider these questions important?
+2.  What is the data source used in the study?
 
     -   
 
-3.  What were the results of these analyses?
+3.  Why was feature engineering *useful* or even *necessary* in this study?
 
     -   
 
 ### Part II: Data Product
 
-This is likely to be the most challenging data product to date. Here, tune an even more complex model - a neural network - and evaluate how much more predictively accurate (if at all fr this data set!) this highly complex algorithm is.
-
-The code we ran in the case study is below. Please modify this code to specify and tune a neural network.
-
-You are also welcome to **another model type**. The key here is that it's a more complex model that requires using tuning parameters. Another option is a support vector machine (tutorial [here](https://emilhvitfeldt.github.io/ISLR-tidymodels-labs/support-vector-machines.html)).
-
-A tutorial you can use as a starting point to adapt the code below is [here](https://www.tidymodels.org/learn/models/parsnip-nnet/).
-
-Documentation for a neural network engine we recommend - keras - is [here](https://parsnip.tidymodels.org/reference/details_linear_reg_keras.html).
-
-**Prepare**
-
-```{r}
-library(tidyverse)
-library(tidymodels)
-library(vip) # a new package we're adding for variable importance measures
-
-# OLD! d <- read_csv("data/ngsschat-processed-data.csv")
-d <- read_csv("ngsschat-processed-data-add-three-features.csv") 
-```
-
-**Split data**
-
-```{r}
-train_test_split <- initial_split(d, prop = .80)
-data_train <- training(train_test_split)
-
-kfcv <- vfold_cv(data_train) # again, we will use resampling
-```
-
-**Engineer features**
-
-```{r}
-my_rec <- recipe(code ~ ., data = data_train) %>% 
-    step_normalize(all_numeric_predictors()) %>%
-    step_nzv(all_predictors())
-```
-
-**Specify recipe, model, and workflow**
-
-```{r}
-# specify model
-my_mod <-
-    rand_forest(mtry = tune(), # this specifies that we'll take steps later to tune the model
-                min_n = tune()) %>%
-    set_engine("ranger", importance = "impurity") %>%
-    set_mode("classification")
-
-# specify workflow
-my_wf <-
-    workflow() %>%
-    add_model(my_mod) %>% 
-    add_recipe(my_rec)
-```
-
-**Fit model**
-
-```{r}
-# specify tuning grid
-finalize(mtry(), data_train)
-finalize(min_n(), data_train)
-finalize(trees(), data_train)
-
-tree_grid <- grid_max_entropy(mtry(range(1, 18)),
-                              min_n(range(2, 40)),
-                              trees(range(1, 2000)),
-                              size = 10)
-
-# fit model with tune_grid
-fitted_model <- my_wf %>% 
-    tune_grid(
-        resamples = kfcv,
-        grid = tree_grid,
-        metrics = metric_set(roc_auc, accuracy, kap, sensitivity, specificity, precision)
-    )
-```
-
-**Fit model (part 2)**
-
-```{r}
-# examine best set of tuning parameters; repeat?
-show_best(fitted_model, n = 10, metric = "accuracy")
-
-# select best set of tuning parameters
-best_tree <- fitted_model %>% 
-    select_best(metric = "accuracy")
-
-# finalize workflow with best set of tuning parameters
-final_wf <- my_wf %>% 
-    finalize_workflow(best_tree)
-
-final_fit <- final_wf %>% 
-    last_fit(train_test_split, metrics = metric_set(roc_auc, accuracy, kap, sensitivity, specificity, precision))
-```
-
-**Evaluate accuracy**
-
-```{r}
-# fit stats
-final_fit %>%
-    collect_metrics()
-
-# variable importance plot
-final_fit %>% 
-    pluck(".workflow", 1) %>%   
-    pull_workflow_fit() %>% 
-    vip(num_features = 10)
-```
-
-Did specifying and tuning a neural network make any difference compared to the mean predictive accuracy you found in the case study? Add a few notes below:
-
--   
+For this data product, please add a feature (or several features) *specific to one or more of the activity types* in the OULAD interactions data, and then add these features to your model and evaluate the accuracy. How did the accuracy appreciably change--if at all? Please copy all of your code in one or more code chunks below.
 
 ### Knit & Submit
 
