--- a/lab-4/ll-4-badge.Rmd
+++ b/lab-4/ll-4-badge.Rmd
@@ -26,61 +26,34 @@ Part A:
 
 -   
 
-2.  How might a qualitative analysis follow from the Latent Profile Analysis we carried out? What steps could you take in a qualitative investigation? Feel free to think broadly and creatively here!
+2.  How might a qualitative analysis follow from the Latent Profile Analysis we carried out? What steps could you take in a qualitative investigation? Think broadly and creatively here!
 
 -   
 
-Part B: Once again, use the institutional library (e.g. [NCSU Library](https://www.lib.ncsu.edu/#articles)), [Google Scholar](https://scholar.google.com/) or search engine to locate a research article, presentation, or resource that applies unsupervised machine learning to an educational context aligned with your research interests. More specifically, **locate a machine learning study that involve using Latent Profile Analysis or a similar method**. You may find the published papers that have used LPA helpful in this respect; those can be browsed [here](https://scholar.google.com/scholar?hl=en&as_sdt=0%2C34&q=tidylpa&btnG=). 
+Part B: Once last time, use the institutional library (e.g. [NCSU Library](https://www.lib.ncsu.edu/#articles)), [Google Scholar](https://scholar.google.com/) or search engine to locate a research article, presentation, or resource that applies unsupervised machine learning to an educational context aligned with your research interests. More specifically, **locate a study that involve using Latent Profile Analysis or a similar method**. You may find the published papers that have used LPA helpful in this respect; those can be browsed [here](https://scholar.google.com/scholar?hl=en&as_sdt=0%2C34&q=tidylpa&btnG=). 
 
 1.  Provide an APA citation for your selected study.
 
     -   
 
-2.  What research questions were the authors of this study trying to address and why did they consider these questions important?
+2.  What research questions were the authors of this study trying to address using Latent Profile Analysis or a similar method?
 
     -   
 
-3.  What were the results of these analyses?
+3.  What were the results of these analyses? 
 
     -   
 
+4.  Lastly, what value might a Computational Grounded Theory analysis have in the context of their analysis?
+
+    - 
+    
 ### Part II: Data Product
 
 Like the last data product, this one may be a challenge, too. Here, estimate latent profiles using _your own data_. If you do not have ready access to appropriate data (for LPA, continuous/numeric data), choose any of the data sets in the `data` folder of this repository.
 
-Some code is provided below as a starting point.
-
 ```{r}
-library(tidyverse)
-library(tidyLPA)
 
-d <- read_csv("data/dat_csv_combine_final_full.csv")
-
-d <- d %>% 
-    select(AveCarelessness, AveKnow, AveCorrect = AveCorrect.x, AveResBored, 
-           AveResEngcon, AveResConf, AveResFrust, AveResOfftask, 
-           AveResGaming, NumActions) %>%
-    janitor::clean_names()
-
-scale_data <- function(x) {
-    x = x - mean(x, na.rm = TRUE)
-    x = x / sd(x, na.rm = TRUE)
-    x
-}
-
-d <- d %>%
-    mutate_all(funs(scaled = scale_data)) %>% # using our function to scale all of the variables
-    select(contains("_scaled")) # selecting only the scaled version
-
-d %>%
-    estimate_profiles(1:10) %>% 
-    compare_solutions()
-
-our_solution <- d %>%
-    estimate_profiles(4)
-
-plot_profiles(our_solution, add_line = TRUE) +
-    theme(axis.text.x = element_text(angle = 45, vjust = 0.5, hjust=1))
 ```
 
 Please interpret the results of your analysis below. What did you find? How interpretable and useful are the profiles? And, what next steps - including those involving qualitative analysis - might you take to deepen this analysis?
