--- a/lab-4/ll-4-badge.Rmd
+++ b/lab-4/ll-4-badge.Rmd
@@ -57,7 +57,7 @@ Like the last data product, this one may be a challenge, too. Here, estimate lat
 ```
 
 Please interpret the results of your analysis below. What did you find? How interpretable and useful are the profiles? And, what next steps - including those involving qualitative analysis - might you take to deepen this analysis?
-
+git
 -   
 
 ### Knit & Submit
